--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,15 +3,15 @@ version '1.0-SNAPSHOT'
 
 buildscript {
 //    ext.kotlin_version = '1.2.71'
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.21'
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -19,7 +19,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 }
